<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        >

        <TextView
            android:id="@+id/txt_device_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:text="None"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txt_device_status"
            app:layout_constraintBaseline_toBaselineOf="@+id/txt_device_status"
            />

        <TextView
            android:id="@+id/txt_device_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/btn_property"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_property"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:fontFamily="sans-serif-condensed"
            tools:text="Connecting"
            tools:textColor="#FF7400" />

        <Button
            android:id="@+id/btn_property"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/socket_cam_setting"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="txt_device_name, txt_device_status, btn_property"
            tools:layout_editor_absoluteY="52dp" />

        <Button
                android:id="@+id/btn_trigger_socket_cam"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_trigger_continuous"
            app:layout_constraintTop_toBottomOf="@id/barrier_name"
            android:layout_marginTop="4dp"
            android:text="@string/trigger_socket_cam"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_trigger_continuous"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/btn_trigger_socket_cam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_trigger_socket_cam"
            android:text="@string/trigger_continuous"
            android:textAllCaps="false" />
<!--        <View-->
<!--            android:id="@+id/divider_service_status"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="1dp"-->
<!--            android:background="?android:attr/listDivider"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/btn_trigger_continuous" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>